@@ -14,8 +14,6 @@ use Test::Requires {
     'Sys::Syslog' => '0.28',
 };
 
-use threads;
-use threads::shared;
 use Log::Dispatch;
 use Log::Dispatch::Syslog;
 
@@ -48,7 +46,7 @@ SKIP:
     is_deeply(
         \@log,
         [ [ 'INFO', 'Foo thread' ] ],
-        'passed message to syslog (with thread lock)'
+        'passed message to syslog (with thread lock, but no preloaded threads module)'
     );
 }
 
